--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lenis": "^1.3.13",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "postprocessing": "^6.37.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
